--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,15 @@
 .gitignore
 .python-version
 README.md
+.venv/
 .venv
+**/.venv/
+**/.venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.egg-info/
+dist/
+build/
