--- a/docker/local/dockerfile.local
+++ b/docker/local/dockerfile.local
@@ -8,6 +8,13 @@ RUN pnpm install
 CMD ["pnpm", "run","dev"]
 
 
+# Stage 1: Build dependencies
+FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim as builder
+WORKDIR /build
+COPY pyproject.toml uv.lock ./
+RUN uv sync
+
+# Stage 2: Runtime
 FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim as be-dev
 WORKDIR /app
 
@@ -16,10 +23,13 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
-COPY pyproject.toml uv.lock ./
-RUN uv sync
-COPY ./src ./src
+# Copy the virtual environment from builder stage
+COPY --from=builder /build/.venv /app/.venv
+
+# Copy application files
+COPY ./src/ ./src/
 COPY ./manage.py ./manage.py
 COPY ./uv.lock ./uv.lock
 COPY ./pyproject.toml ./pyproject.toml
+
 CMD ["uv", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
