properly configure venvs

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,14 @@ next-env.d.ts
 
 .venv
 .cursor
+
+/**/__pycache__/**
+/**/*.pyc
+/**/*.pyo
+/**/*.pyd
+/**/*.pyw
+/**/*.pyz
+/**/*.pywz
+/**/*.pyzw
+/**/*.pyzwz
+/**/*.pyzwzw
