--- a/docker/local/dockerfile.local
+++ b/docker/local/dockerfile.local
@@ -8,13 +8,11 @@ RUN pnpm install
 CMD ["pnpm", "run","dev"]
 
 
-# Stage 1: Build dependencies
 FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim as builder
 WORKDIR /build
 COPY pyproject.toml uv.lock ./
 RUN uv sync
 
-# Stage 2: Runtime
 FROM ghcr.io/astral-sh/uv:python3.13-bookworm-slim as be-dev
 WORKDIR /app
 
@@ -23,13 +21,14 @@ RUN apt-get update && apt-get install -y \
     gcc \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy the virtual environment from builder stage
-COPY --from=builder /build/.venv /app/.venv
+COPY --from=builder /build/.venv /app/.venv-docker
 
-# Copy application files
 COPY ./src/ ./src/
 COPY ./manage.py ./manage.py
 COPY ./uv.lock ./uv.lock
 COPY ./pyproject.toml ./pyproject.toml
 
+ENV VIRTUAL_ENV=/app/.venv-docker
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ENV UV_PROJECT_ENVIRONMENT=/app/.venv-docker
 CMD ["uv", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
