--- a/docker/local/docker-compose.local.yml
+++ b/docker/local/docker-compose.local.yml
@@ -6,10 +6,12 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
-      - /app/node_modules
+      - ./src:/app/src
+      - ./manage.py:/app/manage.py
+      - ./pyproject.toml:/app/pyproject.toml
+      - ./uv.lock:/app/uv.lock
       - /app/__pycache__
-      - /app/.venv
+      - /app/.venv-docker
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=settings.local
