--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.1",
+    "clsx": "^2.1.1",
+    "code-inspector": "^1.16.0",
     "next": "15.4.5",
     "postcss": "^8.5.6",
     "react": "19.1.0",
