--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,10 @@ dependencies = [
     "django-cors-headers>=4.6.0",
     "djangorestframework>=3.15.2",
     "pillow>=11.0.0",
+    "langgraph>=0.6.7",
+    "langchain>=0.3.27",
+    "google-genai>=1.36.0",
+    "langchain-openai>=0.3.33",
+    "langchain-google-genai>=2.1.10",
+    "dotenv>=0.9.9",
 ]
