initial setup for chatbot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,5 @@ dependencies = [
     "langchain-openai>=0.3.33",
     "langchain-google-genai>=2.1.10",
     "dotenv>=0.9.9",
+    "drf-spectacular>=0.28.0",
 ]
