--- a/docker/local/dockerfile.local
+++ b/docker/local/dockerfile.local
@@ -1,10 +1,10 @@
 FROM node:22-alpine as fe-dev
 WORKDIR /app
-RUN npm install -g pnpm@9.15.4
+RUN npm install -g pnpm@9.15.5
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-COPY package.json .
-RUN pnpm install
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 CMD ["pnpm", "run","dev"]
 
 
