--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,10 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-focus-scope": "^1.1.7",
     "@tanstack/react-query": "^5.87.1",
     "clsx": "^2.1.1",
     "code-inspector": "^1.16.0",
+    "js-cookie": "^3.0.5",
     "next": "15.4.5",
+    "openapi-fetch": "^0.14.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -20,14 +24,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@openapitools/openapi-generator-cli": "^2.23.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "openapi-typescript": "^7.9.1",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@9.15.5",
+  "engines": {
+    "node": ">=22"
+  }
 }
