--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.87.1",
     "clsx": "^2.1.1",
     "code-inspector": "^1.16.0",
+    "framer-motion": "^12.23.21",
     "js-cookie": "^3.0.5",
     "next": "15.4.5",
     "openapi-fetch": "^0.14.0",
